kubernetes/apps/music/airsonic.yaml
apiVersion: v1
kind: Service
metadata:
  name: airsonic
  namespace: music
spec:
  selector:
    app: music
    name: airsonic
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airsonic
  namespace: music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music
      name: airsonic
  template:
    metadata:
      labels:
        app: music
        name: airsonic
    spec:
      containers:
        - name: airsonic
          image: tamland/airsonic-refix:latest
          ports:
            - containerPort: 80
