kubernetes/apps/music/deemix.yaml
apiVersion: v1
kind: Service
metadata:
  name: deemix
  namespace: music
spec:
  selector:
    app: music
    name: deemix
  ports:
    - protocol: TCP
      port: 6595
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deemix
  namespace: music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music
      name: deemix
  template:
    metadata:
      labels:
        app: music
        name: deemix
    spec:
      containers:
        - name: deemix
          image: registry.gitlab.com/bockiii/deemix-docker
          ports:
            - containerPort: 6595
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: music-nfs-pvc
        - name: config
          persistentVolumeClaim:
            claimName: deemix-config-pvc
