kubernetes/apps/music/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
  namespace: music
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
spec:
  tls:
    - secretName: wildcard.home.adityathebe.com
      hosts:
        - airsonic.home.adityathebe.com
        - deemix.home.adityathebe.com
  rules:
    - host: deemix.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: deemix
                port:
                  number: 6595
    - host: airsonic.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: airsonic
                port:
                  number: 80
